[tool.poetry]
name = "udemy-langchain"
version = "0.1.0"
description = ""
authors = ["hayato898 <aei.jnr.tx.159.357@iCloud.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "3.31.0"
pydantic = "1.10.7"
langchain = "0.0.172"
openai = "0.27.6"
python-dotenv = "^1.1.1"
pandas = "2.0.3"
tabulate = "0.9.0"
pdf2image = "1.16.3"
pytesseract = "0.3.10"
tiktoken = "0.4.0"
torch = "2.2.2"
chromadb = "0.3.23"
unstructured = "0.6.6"
slack-bolt = "1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
